ZOOKEEPER-288. Cleanup and fixes to BookKeeper (flavio via mahadev)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/zookeeper/trunk@761077 13f79535-47bb-0310-9956-ffa450edef68